--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 # pytest.ini
 [pytest]
-DJANGO_SETTINGS_MODULE = agh_db_project.settings  # Replace with your project settings module
-python_files = tests.py test_*.py *_tests.py  # Discover tests in these files
+DJANGO_SETTINGS_MODULE = agh_db_project.settings
+python_files = tests.py test_*.py *_tests.py
 
 
 [coverage:run]
